...
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.96" />

    <EditText
        android:id="@+id/editText_description_income"
        android:layout_width="276dp"
        android:layout_height="63dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="150dp"
        android:background="#FFFFFF	"
        android:ems="10"
        android:fontFamily="@font/droid"
        android:hint="Beschreibung (optional)"
        android:inputType="textPersonName"
        android:maxLength="30"
        android:textColor="#F0000000"
        app:layout_constraintBottom_toTopOf="@+id/Button_cancel_income"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_extraCat_income" />

    <EditText
        android:id="@+id/editText_value_income"
        android:layout_width="276dp"
        android:layout_height="63dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
...
        app:layout_constraintEnd_toStartOf="@+id/imageView_extraCat_income"
        app:layout_constraintStart_toStartOf="@+id/editText_description_income"
        app:layout_constraintTop_toBottomOf="@+id/imageView_extraCat_income"
        app:srcCompat="@mipmap/cancel_inv_foreground" />

    <ImageButton
        android:id="@+id/Button_date_income"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="250dp"
        android:layout_marginBottom="8dp"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_value_income"
        app:srcCompat="@mipmap/calender_inv_foreground" />

    <ImageButton
        android:id="@+id/Button_check_income"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="250dp"
        android:layout_marginBottom="8dp"
        android:background="#282828"
...
